a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_mcilroy/invalid_type_five.min
var a: float;

a = 2 + 2.0;
a = 2 + "hello";
a = b + c;
